--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.6",
     "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^12.34.0",
     "next": "16.1.6",
