--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/third-parties": "^16.1.6",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
+    "cobe": "^0.6.5",
     "framer-motion": "^12.34.0",
     "next": "16.1.6",
     "react": "19.2.3",
